# YMBot

Drill_effector/: readme.md
Drill_effector/relay_ctrl_node/: package.xml  readme.md  setup.cfg  setup.py
Drill_effector/relay_ctrl_node/config/: relay_ctrl.yaml
Drill_effector/relay_ctrl_node/document/: 指令.txt
Drill_effector/relay_ctrl_node/launch/: relay_ctrl.launch.py
Drill_effector/relay_ctrl_node/relay_ctrl_node/: power_drill_from_hand.py  relay_ctrl.py
Drill_effector/ymrobot_msgs/: CMakeLists.txt  package.xml
Drill_effector/ymrobot_msgs/action/: ArmControl.action  AudioControl.action  CameraFunction.action  CloudChassisCharge.action  CloudChassisNav.action  CloudChassisNavReposition.action  DynamicFusParameters.action  ElevatorDetection.action  EnterOutElvatorResult.action  GetCurrentTask.action  LoadMap.action  LogUpdate.action  MoveElevator.action  PlayMp3.action  PoseManager.action  Recharge.action  Relcation.action  Relocalize.action  ResquestMoveFloor.action  SetParams.action  SystemGuidance.action  UpClimbAction.action  WaitElevator.action
Drill_effector/ymrobot_msgs/msg/: BTNodeTaskState.msg  BinaryData.msg  CloudChassisMarkPoint.msg  CloudChassisStatus.msg  Command.msg  ControlMode.msg  CurrentPose.msg  DotPoints.msg  DotPointsList.msg  EmojiFixed.msg  GuideRoute.msg  ImageVideo.msg  LedShow.msg  MapManage.msg  MapTaskCommand.msg  NavPoint.msg  PatrolMission.msg  RobotDeviceStatus.msg  SlamCommand.msg  Task.msg  TaskStatus.msg  TaskStatusCode.msg  UpdateList.msg  Upper.msg  VoiceMessage.msg  WakeUpWordSetting.msg
Drill_effector/ymrobot_msgs/srv/: Audio.srv  CLoudNav.srv  CloudChassisMapList.srv  Detect.srv  DotPoint.srv  DownloadFile.srv  DualArm.srv  EMOJI.srv  Grasp.srv  HumanoidUpperLimb.srv  LargeModelRequestTask.srv  MapTaskManage.srv  MoveTarget.srv  PowerDrill.srv  SlamTaskManage.srv  SystemGuidance.srv  UpLimb.srv
OrbbecSDK_ROS2/orbbec_camera/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
OrbbecSDK_ROS2/orbbec_camera/log/: latest_build
arm_vr_motion/: package.xml  readme.md  setup.cfg  setup.py
arm_vr_motion/ik_solver_pkg/: ik_servo_node_collision.py
arm_vr_motion/ik_solver_pkg/robot_control/: ymbot_collisionchecker.py  ymbot_ikf.py
arm_vr_motion/ik_solver_pkg/utils/: weighted_moving_filter.py
chassis_control/chassis_driver_node/: CMakeLists.txt  package.xml  readme.md
chassis_control/chassis_driver_node/include/chassis_driver_node/: chassis_driver_node.hpp  thread_safe_queue.hpp
chassis_control/chassis_driver_node/src/: chassis_driver_node.cpp
chassis_control/keyboard_control/: CMakeLists.txt  package.xml  readme.md
chassis_control/keyboard_control/config/: keyboard_control.yaml
chassis_control/keyboard_control/launch/: keyboard_control.launch.py
chassis_control/keyboard_control/src/: keyboard_control.cpp
control/ymbot_d_control/: CMakeLists.txt  package.xml
control/ymbot_d_control/config/: demo_rviz_config.rviz  ymbot_d_simulated_config_body.yaml  ymbot_d_simulated_config_body_neck.yaml  ymbot_d_simulated_config_left_arm.yaml  ymbot_d_simulated_config_neck.yaml  ymbot_d_simulated_config_right_arm.yaml
control/ymbot_d_control/launch/: activate_multiple_groups.launch.py  delta_joint_tracking_neck.launch.py  pose_tracking_left_arm.launch.py  pose_tracking_right_arm.launch.py
control/ymbot_d_control/scripts/: align_coordinate_system.py
control/ymbot_d_control/src/: .keyboard_control_by_multiple_canables.cpp.swp  body_servo_node.cpp  keyboard_control_by_multiple_canables.cpp  modify_motors_pid.cpp  pose_tracking_left_arm.cpp  pose_tracking_right_arm.cpp  position_tracking_neck.cpp
control/ymbot_d_description/: package.xml  reamde.md  setup.cfg  setup.py
control/ymbot_d_description/launch/: view_robot_launch.py
control/ymbot_d_description/meshes/: fix.STL  front_wheel_link.STL  left_elbow_pitch_link.STL  left_front_post_link.STL  left_front_wheel_link.STL  left_hend_link.STL  left_rear_post_link.STL  left_rear_wheel_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_wheel_link.STL  left_wrist_pitch_link.STL  link1.STL  link2.STL  link3.STL  neck_pitch_link.STL  neck_yaw_link.STL  rear_wheel_link.STL  right_elbow_pitch_link.STL  right_front_post_link.STL  right_front_wheel_link.STL  right_hend_link.STL  right_rear_post_link.STL  right_rear_wheel_link.STL  right_shoulder_pitch_link.STL  right_shoulder_roll_link.STL  right_wheel_link.STL  right_wrist_pitch_link.STL
control/ymbot_d_description/srdf/: ymbot_d.srdf
control/ymbot_d_description/urdf/: ymbot_d.urdf
control/ymbot_d_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
control/ymbot_d_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  ymbot_d.ros2_control.xacro  ymbot_d.srdf  ymbot_d.urdf.xacro
control/ymbot_d_moveit_config/launch/: demo.launch.py  demo_moveit_backend.launch.py  lbs_demo.launch.py  (+9 more)
control/ymbot_d_ros2_controller_sharedmemory/: CMakeLists.txt  package.xml  ymbot_d_ros2_controller_sharedmemory.xml
control/ymbot_d_ros2_controller_sharedmemory/include/ymbot_d_ros2_controller_sharedmemory/: SharedMemoryArm.hpp  visibility_control.h  ymbot_d_hardware_interface.hpp
control/ymbot_d_ros2_controller_sharedmemory/src/: ymbot_d_hardware_interface.cpp
inspire_hand/: Readme.md  package.xml  setup.py
inspire_hand/inspire_hand/: hand_grasp_state_pub.py  inspire_hand_sub.py  reset_hand.py
realsense-ros/: README.md
remote_operate_pkg/: package.xml  readme.md  setup.cfg  setup.py
remote_operate_pkg/remote_operate_pkg/: body_control.py  hand_control.py  joint_control.py  neck_control.py
start_robot/: package.xml  readme.md  setup.py
start_robot/launch/: gemini2L_recorder_launch.py  rs_launch.py  rs_multi_camera_launch.py  rs_single_camera_launch.py  run.launch.py
start_robot/start_robot/: real_lerobot_collector.py  real_policy_inference.py
vr_receiver_tcp/: package.xml  readme.md  setup.cfg  setup.py
vr_receiver_tcp/vr_receiver_tcp/: vr_receiver_tcp.py
(+14 files in other folders)
