<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ymbot_d_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sh@todo.todo">sh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ymbot_hardware_driver</depend>
  <exec_depend>ymbot_d_description</exec_depend>
  <exec_depend>ymbot_d_moveit_config</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
