<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ymbot_d_ros2_controller_sharedmemory</name>
  <version>0.0.0</version>
  <description>Demo package of `ros2_control` hardware for ymbot_d.</description>

  <maintainer email="sh.a21@foxmail.com">Sun Hao</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ymbot_hardware_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
